# python-logger

./: setup.cfg
logger/: config.py  log_manager.py
tests/: test_logger.py
