[metadata]
name = logger
version = 0.0.1
author = Centribal
description = Logger package to log messages from Centribal to the console in json format
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src